--- a/app.json
+++ b/app.json
@@ -21,13 +21,16 @@
       "supportsTablet": true
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      }
+      "package": "com.abuodehbros.tracking",
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "b9018f9d-51aa-4568-8bec-e0fd31dc74c9"
+      }
     }
   }
 }
