--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@react-navigation/stack": "^6.3.10",
     "axios": "^1.2.2",
     "expo": "~47.0.9",
+    "expo-linking": "^3.3.0",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-map-link": "^2.10.2",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-settings-components": "^0.0.2"
