--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.2.2",
     "expo": "~47.0.9",
     "expo-linking": "^3.3.0",
+    "expo-location": "^15.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
@@ -24,7 +25,9 @@
     "react-native-map-link": "^2.10.2",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-settings-components": "^0.0.2"
+    "react-native-settings-components": "^0.0.2",
+    "react-native-swiper-flatlist": "^3.0.18",
+    "react-native-webview": "11.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
