--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@react-navigation/stack": "^6.3.10",
     "axios": "^1.2.2",
     "expo": "~47.0.9",
+    "expo-background-fetch": "^11.0.1",
     "expo-linking": "^3.3.0",
     "expo-location": "^15.0.1",
     "expo-status-bar": "~1.4.2",
+    "expo-task-manager": "^11.0.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "^2.8.0",
