--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-settings-components": "^0.0.2",
+    "react-native-swipeable-list": "^0.1.2",
     "react-native-swiper-flatlist": "^3.0.18",
     "react-native-webview": "11.26.0"
   },
