--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.2.2",
     "expo": "^48.0.0",
     "expo-background-fetch": "~11.1.1",
+    "expo-keep-awake": "^12.0.1",
     "expo-linking": "~4.0.1",
     "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
